fix(modal): add transparent outline for high contrast themes

--- a/packages/components/src/components/modal/_modal.scss
+++ b/packages/components/src/components/modal/_modal.scss
@@ -75,6 +75,8 @@
     width: 100%;
     height: 100%;
     max-height: 100%;
+    outline: 3px solid transparent;
+    outline-offset: -3px;
     overflow: hidden;
     transform-origin: top center;
     transform: translate3d(0, -24px, 0);
